ros2_ws/log/build_2026-01-19_01-47-27/winmate_teleop/stderr.log
  File "/AUV-Controller/ros2_ws/install/winmate_teleop/lib/python3.10/site-packages/winmate_teleop/joy_to_wrench.py", line 1
    mport rclpy
          ^^^^^
SyntaxError: invalid syntax

